create X,O and player creator

--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
     <div class="settings">
         <div>
             <label for="playerone"></label>
-            <input placeholder="Player One" type="text">
+            <input id="playerone" placeholder="Player One" type="text">
         </div>
         <div>
             <label for="playertwo"></label>
-            <input placeholder="Player Two" type="text">
+            <input id="playertwo" placeholder="Player Two" type="text">
         </div>
+        <button class="submitplayers">Submit Players</button>
 
     </div>
 
     <div class="gamebox">
-        <div data-box="0"></div>
-        <div data-box="1"></div>
-        <div data-box="2"></div>
-        <div data-box="3"></div>
-        <div data-box="4"></div>
-        <div data-box="5"></div>
-        <div data-box="6"></div>
-        <div data-box="7"></div>
-        <div data-box="8"></div>
+        <div class="box" data-box="0"></div>
+        <div class="box" data-box="1"></div>
+        <div class="box" data-box="2"></div>
+        <div class="box" data-box="3"></div>
+        <div class="box" data-box="4"></div>
+        <div class="box" data-box="5"></div>
+        <div class="box" data-box="6"></div>
+        <div class="box" data-box="7"></div>
+        <div class="box" data-box="8"></div>
     </div>
 
     
